home page setup.

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+    <head>
+        <title>MangaShelf</title>
+        <link rel="icon" type="image/x-icon" href="/shelf.webp">
+        <link rel="stylesheet" href="node_modules/@picocss/pico/css/pico.min.css">
+        <link rel="stylesheet" href="src/style.css">
+        <script defer src="scripts/header.js"></script>
+        <script defer src="scripts/manga.js"></script>
+    </head>
+
+    <body>
+        <header></header>
+        <main id="main-content"></main>
+    </body>
+
 </html>
